--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
 mccabe==0.6.1
 packaging==21.0
+Pillow==8.4.0
 platformdirs==2.4.0
 pycodestyle==2.8.0
 PyJWT==2.3.0
